# pdf-splitter

./: .gitignore  README.md  pyproject.toml
src/split_pdf_by_page/: cli.py
