[project]
name = "split-pdf-by-page"
version = "0.1.0"
description = ""
authors = [
    {name = "pavel", email = "mpavel@duck.com"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "split_pdf_by_page", from = "src"}]
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
split-pdf = "split_pdf_by_page.cli:main"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.9.0,<26.0.0)"
]
